Change the code (Git clone)

--- a/SAGASforGithub.ipynb
+++ b/SAGASforGithub.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,15 +19,7 @@
         "id": "dA0IbONZEmMk",
         "outputId": "422edaaf-f4a9-4f76-b3b1-3d43e0e6ade8"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Writing SAGAS.cpp\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%writefile SAGAS.cpp\n",
         "\n",
@@ -2755,7 +2747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2763,15 +2755,7 @@
         "id": "oIb6nkPUFmBn",
         "outputId": "b68a2d90-0411-4f44-a43c-f39ab12d7c63"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/content/volatile\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import subprocess\n",
         "import shutil\n",
@@ -2800,7 +2784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "Xan_Idz_wUAN"
       },
@@ -2814,6 +2798,8 @@
         "    Username = input()\n",
         "    Token = input()\n",
         "    cmd = f'git clone \"https://{Username}:{Token}@github.com/{Username}/SAGAS.git\"'\n",
+        "    if((not Username) and (not Token)):\n",
+        "        cmd = 'git clone \"https://github.com/bioinfo-tsukuba/SAGAS.git\"'\n",
         "    subprocess.run(cmd, shell = True)\n",
         "\n",
         "if __name__ == '__main__':\n",
