--- a/SAGASforGithub.ipynb
+++ b/SAGASforGithub.ipynb
@@ -32,10 +32,16 @@
         "#include <set> // set\n",
         "#include <iterator>\n",
         "#include <random> \n",
+        "#include <vector> //vector\n",
+        "#include <tuple> // tuple, make_tuple\n",
+        "#include <utility> // pair, make_pair\n",
+        "#include <cstdio> // printf\n",
         "\n",
         "\n",
         "//時間取得\n",
+        "#include <chrono>\n",
         "#include <sys/time.h>\n",
+        "#include <ctime>\n",
         "#include <iomanip>\n",
         "using namespace std;\n",
         "\n",
