Add config makers

--- a/SAGASforGithub.ipynb
+++ b/SAGASforGithub.ipynb
@@ -2711,6 +2711,7 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
         "os.chdir(\"/content\")"
       ]
     },
@@ -2781,20 +2782,173 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "3dsNjyCHbOKu"
       },
       "source": [
-        "#Make config file"
+        "# Make config file"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## interactive config maker"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
-      "metadata": {
-        "id": "EgK6t3sNf6fx"
-      },
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import csv\n",
+        "import datetime\n",
+        "\n",
+        "def main():\n",
+        "  make_config_interactive()\n",
+        "\n",
+        "def get_now():\n",
+        "    now = datetime.datetime.now(datetime.timezone(datetime.timedelta(hours=0)))\n",
+        "    return now.strftime('%Y_%m_%d_%H_%M_%S')\n",
+        "\n",
+        "def ask(question):\n",
+        "  print(question,end=\" \")\n",
+        "  return input()\n",
+        "\n",
+        "def accept(answer):\n",
+        "  return (answer == \"Y\" or answer == \"y\")\n",
+        "\n",
+        "def reject(answer):\n",
+        "  return (answer == \"N\" or answer == \"n\")\n",
+        "\n",
+        "def SAGAS_mode(configs):\n",
+        "    configs[\"Adjust_strictly\"] = \"TRUE\"\n",
+        "    configs[\"Align_start_time\"] = \"TRUE\"\n",
+        "    configs[\"End_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"From_greedy_searching\"] = \"FALSE\"\n",
+        "    configs[\"Loop_end_point\"] = 0\n",
+        "    configs[\"Loop_start_from\"] = 0\n",
+        "    configs[\"Naive\"] = \"FALSE\"\n",
+        "    configs[\"Set_end_point\"] = 0\n",
+        "    configs[\"Set_start_from\"] = -1\n",
+        "    configs[\"Start_from_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"With_greedy_searching\"] = \"TRUE\"\n",
+        "    return configs\n",
+        "\n",
+        "def Greedy_mode(configs):\n",
+        "    configs[\"Adjust_strictly\"] = \"FALSE\"\n",
+        "    configs[\"Align_start_time\"] = \"FALSE\"\n",
+        "    configs[\"End_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"From_greedy_searching\"] = \"TRUE\"\n",
+        "    configs[\"Loop_end_point\"] = 0\n",
+        "    configs[\"Loop_start_from\"] = 0\n",
+        "    configs[\"Naive\"] = \"FALSE\"\n",
+        "    configs[\"Set_end_point\"] = 0\n",
+        "    configs[\"Set_start_from\"] = -1\n",
+        "    configs[\"Start_from_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"With_greedy_searching\"] = \"FALSE\"\n",
+        "    configs[\"Annealing_time_(msec)\"] = -1\n",
+        "    return configs\n",
+        "\n",
+        "def SA_mode(configs):\n",
+        "    configs[\"Adjust_strictly\"] = \"FALSE\"\n",
+        "    configs[\"Align_start_time\"] = \"FALSE\"\n",
+        "    configs[\"End_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"From_greedy_searching\"] = \"FALSE\"\n",
+        "    configs[\"Loop_end_point\"] = 0\n",
+        "    configs[\"Loop_start_from\"] = 0\n",
+        "    configs[\"Naive\"] = \"TRUE\"\n",
+        "    configs[\"Set_end_point\"] = 0\n",
+        "    configs[\"Set_start_from\"] = -1\n",
+        "    configs[\"Start_from_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"With_greedy_searching\"] = \"FALSE\"\n",
+        "    return configs\n",
+        "\n",
+        "def SA_Mod_mode(configs):\n",
+        "    configs[\"Adjust_strictly\"] = \"TRUE\"\n",
+        "    configs[\"Align_start_time\"] = \"TRUE\"\n",
+        "    configs[\"End_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"From_greedy_searching\"] = \"FALSE\"\n",
+        "    configs[\"Loop_end_point\"] = 0\n",
+        "    configs[\"Loop_start_from\"] = 0\n",
+        "    configs[\"Naive\"] = \"FALSE\"\n",
+        "    configs[\"Set_end_point\"] = 0\n",
+        "    configs[\"Set_start_from\"] = -1\n",
+        "    configs[\"Start_from_the_middle\"] = \"FALSE\"\n",
+        "    configs[\"With_greedy_searching\"] = \"FALSE\"\n",
+        "    return configs\n",
+        "\n",
+        "\n",
+        "def make_config_interactive():\n",
+        "  \n",
+        "  configs = dict()\n",
+        "  machine_num = int(ask(\"How many types of machines does your lab have?\"))\n",
+        "  ADD_list = list()\n",
+        "  for i in range(machine_num):\n",
+        "    ADD_list.append(int(ask(f\"How many type {i+1} machines do you want to add at maximum?\")))\n",
+        "  for i, k in enumerate(ADD_list):\n",
+        "    configs[f\"ADD_machine{i+1}\"] = k\n",
+        "\n",
+        "  configs[\"ID\"] = ask(\"Your experiment's name:\")\n",
+        "  configs[\"Annealing_time_(msec)\"] = int(ask(\"Annealing time (msec):\"))\n",
+        "  configs[\"Loops\"] = int(ask(\"Number of replication:\"))\n",
+        "  configs[\"Output_directory\"] = ask(\"Output directory for your simulation (absolute path):\")\n",
+        "  configs[\"Source_directory\"] = ask(\"Source directory including dependency.tsv, machines.tsv, operations.tsv, tcmb.tsv (absolute path):\")\n",
+        "\n",
+        "  while True: \n",
+        "    ans = ask(\"SAGAS mode (default)? (y/n)\")\n",
+        "    if accept(ans):\n",
+        "      configs = SAGAS_mode(configs)\n",
+        "      break\n",
+        "    elif reject(ans):\n",
+        "      while True:\n",
+        "        mode = ask(\"Choose the mode (SAGAS/Greedy/SA/SA-Mod)\")\n",
+        "        if mode == \"SAGAS\":\n",
+        "          configs = SAGAS_mode(configs)\n",
+        "        elif mode == \"Greedy\":\n",
+        "          configs = Greedy_mode(configs)\n",
+        "        elif mode == \"SA\":\n",
+        "          configs = SA_mode(configs)\n",
+        "        elif mode == \"SA-Mod\":\n",
+        "          configs = SA_Mod_mode(configs)\n",
+        "        else:\n",
+        "          continue\n",
+        "        break\n",
+        "      break\n",
+        "    else: \n",
+        "      continue\n",
+        "  \n",
+        "  name = ask(\"The config file name:\")\n",
+        "  if \".\" not in name:\n",
+        "    name = name + \".tsv\"\n",
+        "    \n",
+        "  with open(name, 'w') as f:\n",
+        "\n",
+        "    f.write(f'DATE(GMT)\\t{get_now()}\\n')\n",
+        "    for k, v in configs.items():\n",
+        "      f.write(f'{k}\\t{v}\\n')\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Manual config maker"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "import csv\n",
@@ -2856,7 +3010,7 @@
         "  configs[\"From_greedy_searching\"] = From_greedy_searching\n",
         "  configs[\"ID\"] = ID\n",
         "  configs[\"Loop_end_point\"] = Loop_end_point\n",
-        "  configs[\"Loop_start_from\"] = Loop_start_from\n",
+        "  configs[\"Loop_start_from\"] = Loop_start_from \n",
         "  configs[\"Loops\"] = Loops\n",
         "  configs[\"Naive\"] = Naive\n",
         "  configs[\"Output_directory\"] = Output_directory\n",
@@ -2877,12 +3031,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zWtalfhiQyZb"
       },
       "source": [
-        "#Config splitter"
+        "# Config splitter and SAGAS runner"
       ]
     },
     {
@@ -2917,7 +3072,7 @@
         "\n",
         "\n",
         "def main():\n",
-        "  config_name = \"RNAseq_N5_3min_GR_config.tsv\"\n",
+        "  config_name = \"RNAseq_N5_3min_GR_config.tsv\"#The config file you want to split\n",
         "  config_ori = config_name\n",
         "  config_list = config_split(config_ori, split_num = 4, temp_replace = False)\n",
         "  print(config_list)\n",
@@ -3005,12 +3160,124 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Run a sample case"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import subprocess\n",
+        "import shutil\n",
+        "import pandas as pd\n",
+        "import math\n",
+        "import os\n",
+        "\n",
+        "import os\n",
+        "os.chdir(\"/content/SAGAS\")\n",
+        "\n",
+        "def main():\n",
+        "  config_name = \"RNAseq_N5_3min_GR_config.tsv\"#The config file you want to split\n",
+        "  config_ori = config_name\n",
+        "  config_list = config_split(config_ori, split_num = 4, temp_replace = False)\n",
+        "  print(config_list)\n",
+        "\n",
+        "  for i in config_list:\n",
+        "    cmd = cmd_make(config = i, mainfile = \"./SAGAS_compiled\", user = \"YuyaArai\", memo = \"simulationtest\").split()\n",
+        "    print(i)\n",
+        "    p = subprocess.Popen(cmd)\n",
+        "\n",
+        "\n",
+        "def cmd_make(config, mainfile = \"./SAGAS_compiled\", user = \"YuyaArai\", memo = \"simulationtest\", gikomode = False, penalty = 108000, gl = -1, fs = True):\n",
+        "  giko = '-giko' if gikomode else ''\n",
+        "  failedskip = '-fs' if fs else ''\n",
+        "  return f'{mainfile} -log {user} \"{memo}\" -conf {config} {giko} -penalty {penalty} -gl {gl} {failedskip}'\n",
+        "\n",
+        "\n",
+        "def config_split(config_ori, split_num = 2, temp_replace = True):\n",
+        "  df = pd.read_table(config_ori, index_col=0, header=None)\n",
+        "  index = df.index\n",
+        "\n",
+        "  index = [i for i in list(index) if \"ADD_machine\" in i]\n",
+        "\n",
+        "  simulation_num = 1\n",
+        "\n",
+        "  for i in index:\n",
+        "    simulation_num = simulation_num * (int(df.at[i, 1])+1)\n",
+        "\n",
+        "  Loops = int(df.at[\"Loops\", 1])\n",
+        "\n",
+        "  one_loop = simulation_num\n",
+        "\n",
+        "  simulation_num = simulation_num * Loops \n",
+        "\n",
+        "  unit = math.ceil(simulation_num / split_num)\n",
+        "\n",
+        "  cur_dir = os.getcwd()\n",
+        "  new = \"temp\"\n",
+        "  dir = \"\"\n",
+        "  if(temp_replace):\n",
+        "    dir = f'{cur_dir}/{new}'\n",
+        "    shutil.rmtree(dir, ignore_errors=True)\n",
+        "  else:\n",
+        "    i = 1\n",
+        "    dir = f'{cur_dir}/{new}_{i}'\n",
+        "    while(os.path.exists(dir)):\n",
+        "      i = i+1\n",
+        "      dir = f'{cur_dir}/{new}_{i}'\n",
+        "\n",
+        "  os.makedirs(dir, exist_ok=True)\n",
+        "\n",
+        "  Loop_end_point = 0\n",
+        "  Loop_start_from = 0\n",
+        "  Set_end_point = 0\n",
+        "  Set_start_from = -1\n",
+        "  now = 0\n",
+        "\n",
+        "  config_list = list()\n",
+        "\n",
+        "  for i in range(split_num):\n",
+        "    df_t = df.copy()\n",
+        "    Loop_start_from = math.floor(min(now, simulation_num)/one_loop)\n",
+        "    Set_start_from = math.floor(min(now, simulation_num)%one_loop - 1)\n",
+        "    now = now + unit\n",
+        "    Loop_end_point = math.floor(min(now, simulation_num)/one_loop)\n",
+        "    Set_end_point = math.floor(min(now, simulation_num)%one_loop - 1)\n",
+        "\n",
+        "    df_t.at[\"Loop_start_from\", 1] = Loop_start_from\n",
+        "    df_t.at[\"Set_start_from\", 1] = Set_start_from\n",
+        "    df_t.at[\"Loop_end_point\", 1] = Loop_end_point\n",
+        "    df_t.at[\"Set_end_point\", 1] = Set_end_point\n",
+        "    df_t.at[\"End_the_middle\", 1] = \"TRUE\"\n",
+        "    df_t.at[\"Start_from_the_middle\", 1]\t= \"TRUE\"\n",
+        "    df_t.at[\"ID\", 1]\t= df_t.at[\"ID\", 1] + f'_{i}'\n",
+        "    df_t.to_csv(f'{dir}/temp_config_{i}.tsv', sep='\\t', index=True, header= False)\n",
+        "    config_list.append(f'{dir}/temp_config_{i}.tsv')\n",
+        "  return config_list\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()\n"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dZTqu5Ev76Id"
       },
       "source": [
-        "#Visualisation"
+        "# Visualisation"
       ]
     },
     {
@@ -3077,7 +3344,7 @@
         "from matplotlib.animation import PillowWriter\n",
         "\n",
         "def main():\n",
-        "  Visualise()\n",
+        "  Visualise()#dir is the directory with SAGAS outputs, outdir is the directory for visualiser outputs.\n",
         "\n",
         "  #ani = animation.ArtistAnimation(fig, plts, interval=100)\n",
         "  #ani.save(\"output.gif\", writer=PillowWriter(fps=200))\n",
