--- a/SAGASforGithub.ipynb
+++ b/SAGASforGithub.ipynb
@@ -11,6 +11,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "m3qiNevvnAVO"
+      },
+      "outputs": [],
       "source": [
         "import subprocess\n",
         "import shutil\n",
@@ -22,12 +27,7 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "m3qiNevvnAVO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -40,15 +40,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.chdir(\"/content/SAGAS\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7-DNzF0NnMw4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.chdir(\"/content/SAGAS\")"
+      ]
     },
     {
       "cell_type": "code",
@@ -94,15 +94,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Make volatile directory for test"
-      ],
       "metadata": {
         "id": "8rN7Bgc-nmXB"
-      }
+      },
+      "source": [
+        "Make volatile directory for test"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5Izaoo7LnjOf"
+      },
+      "outputs": [],
       "source": [
         "import subprocess\n",
         "import shutil\n",
@@ -118,12 +123,7 @@
         "    os.chdir(\"..\")\n",
         "if __name__ == '__main__':\n",
         "    main()"
-      ],
-      "metadata": {
-        "id": "5Izaoo7LnjOf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -409,10 +409,13 @@
         "  config_list = config_split(config_ori, split_num = 4, temp_replace = False)\n",
         "  print(config_list)\n",
         "\n",
+        "  cmds = []\n",
         "  for i in config_list:\n",
         "    cmd = cmd_make(config = i).split()\n",
-        "    print(i)\n",
-        "    p = subprocess.Popen(cmd)\n",
+        "    cmds += cmd + [\"&\"]\n",
+        "\n",
+        "  cmds += [\"wait\"]\n",
+        "  p = subprocess.Popen(cmd)\n",
         "\n",
         "\n",
         "def cmd_make(config, mainfile = \"./SAGAS_compiled\", user = \"YuyaArai\", memo = \"simulationtest\", gikomode = False,penalty = 108000, gl = -1, fs = True):\n",
@@ -522,10 +525,15 @@
         "  config_list = config_split(config_ori, split_num = 4, temp_replace = False)\n",
         "  print(config_list)\n",
         "\n",
+        "  cmds = []\n",
         "  for i in config_list:\n",
         "    cmd = cmd_make(config = i, mainfile = \"./SAGAS_compiled\", user = \"YuyaArai\", memo = \"simulationtest\").split()\n",
         "    print(i)\n",
-        "    p = subprocess.Popen(cmd)\n",
+        "    cmds += cmd + [\"&\"]\n",
+        "\n",
+        "  cmds += [\"wait\"]\n",
+        "  p = subprocess.Popen(cmd)\n",
+        "\n",
         "\n",
         "\n",
         "def cmd_make(config, mainfile = \"./SAGAS_compiled\", user = \"YuyaArai\", memo = \"simulationtest\", gikomode = False, penalty = 108000, gl = -1, fs = True):\n",
@@ -615,14 +623,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "pwd"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-_HjGjBkoBUG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "pwd"
+      ]
     },
     {
       "cell_type": "code",
